// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-47 {
  position: relative;
}

.emotion-46.emotion-46.emotion-46 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

.emotion-41 {
  max-height: calc(300px - 1rem);
  overflow-y: scroll;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-45 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-42 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-43 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-43:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-12 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-12 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-12:hover {
  color: unset;
  fill: unset;
}

.emotion-12[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-12:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-12:not(:disabled):hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-12:not(:disabled):focus:active,
.emotion-12:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700,#000000);
}

.emotion-12 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-11.emotion-11.emotion-11 {
  font-weight: 300;
}

.emotion-11.emotion-11.emotion-11[aria-selected="true"] {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-11.emotion-11.emotion-11[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

.emotion-7 {
  line-height: 1.2;
}

abbr.emotion-7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-7 {
  font-family: monospace;
}

i.emotion-7 {
  font-style: italic;
}

kbd.emotion-7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-7 {
  font-weight: bold;
}

sub.emotion-7,
sup.emotion-7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-7,
u.emotion-7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-7,
cite.emotion-7,
var.emotion-7,
em.emotion-7 {
  font-style: italic;
}

kbd.emotion-7,
pre.emotion-7,
samp.emotion-7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-7 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-49 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-47 emotion-1 emotion-49 test fp-Box fp-Autosuggest"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 fp-AutosuggestInput fp-InputWrapper fp-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
      loop=""
      placeholder="Search for a fruit..."
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-42 emotion-43 emotion-1 emotion-45 emotion-46 fp-AutosuggestPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  >
    <ul
      class="emotion-1 emotion-2 emotion-41 fp-AutosuggestItemsWrapper fp-Box"
    >
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-1"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-2"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-3"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-4"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Mangos
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`overrides styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-46.emotion-46.emotion-46 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

.emotion-41 {
  max-height: calc(300px - 1rem);
  overflow-y: scroll;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-45 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-42 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-43 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-43:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-12 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-12 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-12:hover {
  color: unset;
  fill: unset;
}

.emotion-12[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-12:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-12:not(:disabled):hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-12:not(:disabled):focus:active,
.emotion-12:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700,#000000);
}

.emotion-12 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-11.emotion-11.emotion-11 {
  font-weight: 300;
}

.emotion-11.emotion-11.emotion-11[aria-selected="true"] {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-11.emotion-11.emotion-11[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

.emotion-7 {
  line-height: 1.2;
}

abbr.emotion-7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-7 {
  font-family: monospace;
}

i.emotion-7 {
  font-style: italic;
}

kbd.emotion-7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-7 {
  font-weight: bold;
}

sub.emotion-7,
sup.emotion-7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-7,
u.emotion-7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-7,
cite.emotion-7,
var.emotion-7,
em.emotion-7 {
  font-style: italic;
}

kbd.emotion-7,
pre.emotion-7,
samp.emotion-7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-7 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-47 {
  position: relative;
}

.emotion-47 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-47 emotion-1 emotion-2 fp-Box fp-Autosuggest"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 fp-AutosuggestInput fp-InputWrapper fp-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
      loop=""
      placeholder="Search for a fruit..."
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-42 emotion-43 emotion-1 emotion-45 emotion-46 fp-AutosuggestPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  >
    <ul
      class="emotion-1 emotion-2 emotion-41 fp-AutosuggestItemsWrapper fp-Box"
    >
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-1"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-2"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-3"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-4"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Mangos
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-47 {
  position: relative;
}

.emotion-46.emotion-46.emotion-46 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

.emotion-41 {
  max-height: calc(300px - 1rem);
  overflow-y: scroll;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-45 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-42 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-43 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-43:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-12 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-12 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-12:hover {
  color: unset;
  fill: unset;
}

.emotion-12[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-12:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-12:not(:disabled):hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-12:not(:disabled):focus:active,
.emotion-12:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700,#000000);
}

.emotion-12 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-11.emotion-11.emotion-11 {
  font-weight: 300;
}

.emotion-11.emotion-11.emotion-11[aria-selected="true"] {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-11.emotion-11.emotion-11[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

.emotion-7 {
  line-height: 1.2;
}

abbr.emotion-7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-7 {
  font-family: monospace;
}

i.emotion-7 {
  font-style: italic;
}

kbd.emotion-7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-7 {
  font-weight: bold;
}

sub.emotion-7,
sup.emotion-7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-7,
u.emotion-7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-7,
cite.emotion-7,
var.emotion-7,
em.emotion-7 {
  font-style: italic;
}

kbd.emotion-7,
pre.emotion-7,
samp.emotion-7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-7 .fp-Icon {
  vertical-align: -0.125em;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-47 emotion-1 emotion-2 fp-Box fp-Autosuggest"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 fp-AutosuggestInput fp-InputWrapper fp-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
      loop=""
      placeholder="Search for a fruit..."
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-42 emotion-43 emotion-1 emotion-45 emotion-46 fp-AutosuggestPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  >
    <ul
      class="emotion-1 emotion-2 emotion-41 fp-AutosuggestItemsWrapper fp-Box"
    >
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-1"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-2"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-3"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-4"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Mangos
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-47 {
  position: relative;
}

.emotion-46.emotion-46.emotion-46 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

.emotion-41 {
  max-height: calc(300px - 1rem);
  overflow-y: scroll;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-45 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-42 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-43 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-43:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-12 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-12 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-12:hover {
  color: unset;
  fill: unset;
}

.emotion-12[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-12:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-12:not(:disabled):hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-12:not(:disabled):focus:active,
.emotion-12:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700,#000000);
}

.emotion-12 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-11.emotion-11.emotion-11 {
  font-weight: 300;
}

.emotion-11.emotion-11.emotion-11[aria-selected="true"] {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-11.emotion-11.emotion-11[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

.emotion-7 {
  line-height: 1.2;
}

abbr.emotion-7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-7 {
  font-family: monospace;
}

i.emotion-7 {
  font-style: italic;
}

kbd.emotion-7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-7 {
  font-weight: bold;
}

sub.emotion-7,
sup.emotion-7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-7,
u.emotion-7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-7,
cite.emotion-7,
var.emotion-7,
em.emotion-7 {
  font-style: italic;
}

kbd.emotion-7,
pre.emotion-7,
samp.emotion-7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-7 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-49 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-47 emotion-1 emotion-49 fp-Box fp-Autosuggest"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 fp-AutosuggestInput fp-InputWrapper fp-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
      loop=""
      placeholder="Search for a fruit..."
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-42 emotion-43 emotion-1 emotion-45 emotion-46 fp-AutosuggestPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  >
    <ul
      class="emotion-1 emotion-2 emotion-41 fp-AutosuggestItemsWrapper fp-Box"
    >
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-1"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-2"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-3"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-4"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Mangos
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`theming styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-46.emotion-46.emotion-46 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

.emotion-41 {
  max-height: calc(300px - 1rem);
  overflow-y: scroll;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-45 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-42 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-43 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-43:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-12 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-12 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-12:hover {
  color: unset;
  fill: unset;
}

.emotion-12[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-12:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-12:not(:disabled):hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-12:not(:disabled):focus:active,
.emotion-12:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700,#000000);
}

.emotion-12 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-11.emotion-11.emotion-11 {
  font-weight: 300;
}

.emotion-11.emotion-11.emotion-11[aria-selected="true"] {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-11.emotion-11.emotion-11[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

.emotion-7 {
  line-height: 1.2;
}

abbr.emotion-7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-7 {
  font-family: monospace;
}

i.emotion-7 {
  font-style: italic;
}

kbd.emotion-7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-7 {
  font-weight: bold;
}

sub.emotion-7,
sup.emotion-7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-7,
u.emotion-7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-7,
cite.emotion-7,
var.emotion-7,
em.emotion-7 {
  font-style: italic;
}

kbd.emotion-7,
pre.emotion-7,
samp.emotion-7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-7 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-47 {
  position: relative;
}

.emotion-47 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-47 emotion-1 emotion-2 fp-Box fp-Autosuggest"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 fp-AutosuggestInput fp-InputWrapper fp-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
      loop=""
      placeholder="Search for a fruit..."
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-42 emotion-43 emotion-1 emotion-45 emotion-46 fp-AutosuggestPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  >
    <ul
      class="emotion-1 emotion-2 emotion-41 fp-AutosuggestItemsWrapper fp-Box"
    >
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-1"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-2"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-3"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-4"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Mangos
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-46.emotion-46.emotion-46 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
}

.emotion-41 {
  max-height: calc(300px - 1rem);
  overflow-y: scroll;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
  color: var(--bb-palette-text100,#000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300,#000000);
}

.emotion-45 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-42 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-43 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-43:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-12 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-12 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-12:hover {
  color: unset;
  fill: unset;
}

.emotion-12[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-12:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-12:not(:disabled):hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-12:not(:disabled):focus:active,
.emotion-12:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700,#000000);
}

.emotion-12 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-11.emotion-11.emotion-11 {
  font-weight: 300;
}

.emotion-11.emotion-11.emotion-11[aria-selected="true"] {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-11.emotion-11.emotion-11[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

.emotion-7 {
  line-height: 1.2;
}

abbr.emotion-7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-7 {
  font-family: monospace;
}

i.emotion-7 {
  font-style: italic;
}

kbd.emotion-7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-7 {
  font-weight: bold;
}

sub.emotion-7,
sup.emotion-7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-7,
u.emotion-7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-7,
cite.emotion-7,
var.emotion-7,
em.emotion-7 {
  font-style: italic;
}

kbd.emotion-7,
pre.emotion-7,
samp.emotion-7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-7 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-47 {
  position: relative;
}

.emotion-47 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-47 emotion-1 emotion-2 fp-Box fp-Autosuggest"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 fp-AutosuggestInput fp-InputWrapper fp-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
      loop=""
      placeholder="Search for a fruit..."
      type="text"
      value=""
    />
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-42 emotion-43 emotion-1 emotion-45 emotion-46 fp-AutosuggestPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  >
    <ul
      class="emotion-1 emotion-2 emotion-41 fp-AutosuggestItemsWrapper fp-Box"
    >
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-1"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-2"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-3"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
        id="test-4"
        loop=""
        role="option"
      >
        <span
          class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
        >
          Mangos
        </span>
      </li>
    </ul>
  </div>
</div>
`;
